force-app/main/default/objects/BET_BDD_Form__c/BET_BDD_Form__c.object-meta.xml
<CustomObject>
    <label>BDD Form</label>
    <nameField>
        <displayFormat>BD-{000}</displayFormat>
        <label>BDD Form Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>BDD Forms</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>