force-app/main/default/objects/BET_BDD_Form__c/fields/Assigned_COF__c.field-meta.xml
<CustomField>
    <fullName>Assigned_COF__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>* Assigned COF</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>User.Is_COF_User__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>BDD_Forms</relationshipName>
    <type>Lookup</type>
</CustomField>