force-app/main/default/objects/BET_BDD_Form__c/fields/BDD_AppCom__c.field-meta.xml
<CustomField>
    <fullName>BDD_AppCom__c</fullName>
    <label>Approver Comments</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>