force-app/main/default/objects/BET_BDD_Form__c/fields/BDD_Approver__c.field-meta.xml
<CustomField>
    <fullName>BDD_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>* BDD Approver Name</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>User.Is_Approver_User__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>BDD_Forms_Approver</relationshipName>
    <type>Lookup</type>
</CustomField>