force-app/main/default/objects/BET_BDD_Form__c/fields/BDD_Eligible_Status__c.field-meta.xml
<CustomField>
    <fullName>BDD_Eligible_Status__c</fullName>
    <label>* BDD Eligible Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>