force-app/main/default/objects/BET_BDD_Form__c/fields/BDD_Entity_Type__c.field-meta.xml
<CustomField>
    <fullName>BDD_Entity_Type__c</fullName>
    <label>* BDD Entity Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>BDD_Line_of_Business__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bank</fullName>
            </value>
            <value>
                <fullName>Counterparty</fullName>
            </value>
            <value>
                <fullName>Individual</fullName>
            </value>
            <value>
                <fullName>Vessel</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>