force-app/main/default/objects/BET_BDD_Form__c/fields/BDD_Line_of_Business__c.field-meta.xml
<CustomField>
    <fullName>BDD_Line_of_Business__c</fullName>
    <label>* BDD  Region</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>WONA</fullName>
            </value>
            <value>
                <fullName>STUSCO</fullName>
            </value>
            <value>
                <fullName>SENA</fullName>
            </value>
            <value>
                <fullName>GLOBAL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>