force-app/main/default/objects/BET_BDD_Form__c/fields/BDD_Onboard_Type__c.field-meta.xml
<CustomField>
    <fullName>BDD_Onboard_Type__c</fullName>
    <label>* BDD Onboard Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New Onboard</fullName>
            </value>
            <value>
                <fullName>Remediation Update</fullName>
            </value>
            <value>
                <fullName>Related Party Update</fullName>
            </value>
            <value>
                <fullName>Mass Upload - New Onboard</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>