force-app/main/default/objects/BET_BDD_Form__c/fields/BET_Negative_Stories_Comments__c.field-meta.xml
<CustomField>
    <fullName>BET_Negative_Stories_Comments__c</fullName>
    <label>Adverse Media Comments</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>