force-app/main/default/objects/BET_BDD_Form__c/fields/BET_PEPs_and_Sanctions_Comments__c.field-meta.xml
<CustomField>
    <fullName>BET_PEPs_and_Sanctions_Comments__c</fullName>
    <label>PEPs and Sanctions Comments</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>