force-app/main/default/objects/BET_BDD_Form__c/fields/BET_Red_Flags_Comments__c.field-meta.xml
<CustomField>
    <fullName>BET_Red_Flags_Comments__c</fullName>
    <label>Red Flags Comments</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>