force-app/main/default/objects/BET_BDD_Form__c/fields/BET_Status__c.field-meta.xml
<CustomField>
    <fullName>BET_Status__c</fullName>
    <label>* BET Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
                <default>true</default>
                <label>Draft</label>
            </value>
            <value>
                <fullName>Ready for BDD Approver</fullName>
            </value>
            <value>
                <fullName>Review with BDD Approver</fullName>
            </value>
            <value>
                <fullName>Ready for COF</fullName>
            </value>
            <value>
                <fullName>Review with COF</fullName>
            </value>
            <value>
                <fullName>Ready to Onboard</fullName>
            </value>
            <value>
                <fullName>Submitted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>