force-app/main/default/objects/BET_BDD_Form__c/fields/Bulk_Batch_Execution_Tracking__c.field-meta.xml
<CustomField>
    <fullName>Bulk_Batch_Execution_Tracking__c</fullName>
    <label>Bulk Batch Execution Tracking</label>
    <type>TextArea</type>
</CustomField>