force-app/main/default/objects/BET_BDD_Form__c/fields/Business_Line__c.field-meta.xml
<CustomField>
    <fullName>Business_Line__c</fullName>
    <label>* Business Line</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Crude</fullName>
            </value>
            <value>
                <fullName>Crude Lease Net</fullName>
            </value>
            <value>
                <fullName>Crude Lease NonNet</fullName>
            </value>
            <value>
                <fullName>Crude Lease Check</fullName>
            </value>
            <value>
                <fullName>Crude Lease Royalty</fullName>
            </value>
            <value>
                <fullName>Producer Financing</fullName>
            </value>
            <value>
                <fullName>Broker - Crude</fullName>
            </value>
            <value>
                <fullName>Inspector</fullName>
            </value>
            <value>
                <fullName>Demurrage</fullName>
            </value>
            <value>
                <fullName>Products</fullName>
            </value>
            <value>
                <fullName>Products NOC</fullName>
            </value>
            <value>
                <fullName>Bunker</fullName>
            </value>
            <value>
                <fullName>Broker - Products</fullName>
            </value>
            <value>
                <fullName>Transport (Pipeline)</fullName>
            </value>
            <value>
                <fullName>Terminalling</fullName>
            </value>
            <value>
                <fullName>Risk</fullName>
            </value>
            <value>
                <fullName>Broker - Risk</fullName>
            </value>
            <value>
                <fullName>Risk Marketing</fullName>
            </value>
            <value>
                <fullName>Marine - Crude</fullName>
            </value>
            <value>
                <fullName>Marine - Products</fullName>
            </value>
            <value>
                <fullName>SOPUS NOC</fullName>
            </value>
            <value>
                <fullName>Transmix - Do Not Use</fullName>
            </value>
            <value>
                <fullName>COAL</fullName>
            </value>
            <value>
                <fullName>CREDIT PARENT LINE</fullName>
            </value>
            <value>
                <fullName>Crude (Derivatives)</fullName>
            </value>
            <value>
                <fullName>Crude (Physical)</fullName>
            </value>
            <value>
                <fullName>Crude Freight</fullName>
            </value>
            <value>
                <fullName>EMISSIONS</fullName>
            </value>
            <value>
                <fullName>FINANCIAL LNG</fullName>
            </value>
            <value>
                <fullName>GAS &amp; POWER</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>