force-app/main/default/objects/BET_BDD_Form__c/fields/Comment_Type__c.field-meta.xml
<CustomField>
    <fullName>Comment_Type__c</fullName>
    <label>Comment Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>General</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>