force-app/main/default/objects/BET_BDD_Form__c/fields/Error_In_Bulk_Batch_Execution__c.field-meta.xml
<CustomField>
    <fullName>Error_In_Bulk_Batch_Execution__c</fullName>
    <label>Error In Bulk Batch Execution</label>
    <type>TextArea</type>
</CustomField>