force-app/main/default/objects/BET_BDD_Form__c/fields/Full_Legal_Name__c.field-meta.xml
<CustomField>
    <fullName>Full_Legal_Name__c</fullName>
    <label>* Search Short Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>