force-app/main/default/objects/BET_BDD_Form__c/fields/GoldTier_Status__c.field-meta.xml
<CustomField>
    <fullName>GoldTier_Status__c</fullName>
    <label>* GoldTier Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
                <default>true</default>
                <label>Pending</label>
            </value>
            <value>
                <fullName>Error Occurred</fullName>
            </value>
            <value>
                <fullName>KYC Completed</fullName>
            </value>
            <value>
                <fullName>QC Review</fullName>
            </value>
            <value>
                <fullName>Potential Screening Hit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>