force-app/main/default/objects/BET_BDD_Form__c/fields/Goldtier_Status_Change_Email_Sent__c.field-meta.xml
<CustomField>
    <fullName>Goldtier_Status_Change_Email_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Goldtier Status Change Email Sent</label>
    <type>Checkbox</type>
</CustomField>