force-app/main/default/objects/BET_BDD_Form__c/fields/Goldtier_Status_Updated_Date__c.field-meta.xml
<CustomField>
    <fullName>Goldtier_Status_Updated_Date__c</fullName>
    <label>Goldtier Status Updated Date</label>
    <type>DateTime</type>
</CustomField>