force-app/main/default/objects/BET_BDD_Form__c/fields/GSAP_Banding__c.field-meta.xml
<CustomField>
    <fullName>GSAP_Banding__c</fullName>
    <label>* Banding</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>00 - Diamond</fullName>
            </value>
            <value>
                <fullName>01 - Platinum</fullName>
            </value>
            <value>
                <fullName>02 - Gold</fullName>
            </value>
            <value>
                <fullName>03 - Silver</fullName>
            </value>
            <value>
                <fullName>04 - Bronze</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>