force-app/main/default/objects/BET_BDD_Form__c/fields/GSAP_Classof_Prod__c.field-meta.xml
<CustomField>
    <fullName>GSAP_Classof_Prod__c</fullName>
    <label>* Class of Product</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>2 - Fuels</fullName>
            </value>
            <value>
                <fullName>5 - LPG</fullName>
            </value>
            <value>
                <fullName>9 - Crude</fullName>
            </value>
            <value>
                <fullName>14 - Sulphur</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>