force-app/main/default/objects/BET_BDD_Form__c/fields/GSAP_Customer_Sector__c.field-meta.xml
<CustomField>
    <fullName>GSAP_Customer_Sector__c</fullName>
    <label>* Customer Sector</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Asphalt PlanT - 10199 - Asphalt Plant</fullName>
            </value>
            <value>
                <fullName>Asset Owner - 10202 - Private Asset or BOT</fullName>
            </value>
            <value>
                <fullName>Asset Owner - 10203 - Public Authority</fullName>
            </value>
            <value>
                <fullName>AVN FLIGHT SUPPORT COMPANIES - 10084 - AV Umb. Fuel Orgs</fullName>
            </value>
            <value>
                <fullName>AVN GENERAL AVIATION - 10091 - AV GA Orig Equip Man</fullName>
            </value>
            <value>
                <fullName>AVN GENERAL AVIATION - 10092 - AV GA Repair/Ohaul</fullName>
            </value>
            <value>
                <fullName>AVN GENERAL AVIATION - 10093 - AV GA Other</fullName>
            </value>
            <value>
                <fullName>AVN GENERAL AVIATION - 10130 - AV GA Commercial</fullName>
            </value>
            <value>
                <fullName>AVN GENERAL AVIATION - 10131 - AV GA Business Jets</fullName>
            </value>
            <value>
                <fullName>AVN GENERAL AVIATION - 10132 - AV GA Priv Fly/Trng</fullName>
            </value>
            <value>
                <fullName>AVN GENERAL AVIATION - 10133 - AV GA Agent Reseller</fullName>
            </value>
            <value>
                <fullName>AVN GENERAL AVIATION - 10134 - AV GA Fixed Base Op</fullName>
            </value>
            <value>
                <fullName>AVN GLOBAL AIRLINE - 10077 - AV Glb Avn Other</fullName>
            </value>
            <value>
                <fullName>AVN GLOBAL AIRLINE - 10140 - AV Glb Avn Passenger</fullName>
            </value>
            <value>
                <fullName>AVN GLOBAL AIRLINE - 10141 - AV Glb Avn Cargo</fullName>
            </value>
            <value>
                <fullName>AVN MANUFACTURING - 10053 - AV Manufacturing</fullName>
            </value>
            <value>
                <fullName>AVN OTHER - 10061 - AV Other</fullName>
            </value>
            <value>
                <fullName>AVN SPEC CARRIER - 10078 - AV SC Cargo</fullName>
            </value>
            <value>
                <fullName>AVN SPEC CARRIER - 10079 - AV SC Charter</fullName>
            </value>
            <value>
                <fullName>AVN SPEC CARRIER - 10080 - AV SC Intl Sched.</fullName>
            </value>
            <value>
                <fullName>AVN SPEC CARRIER - 10081 - AV SC LowCostNoFrill</fullName>
            </value>
            <value>
                <fullName>AVN SPEC CARRIER - 10082 - AV SC Regionl/Feeder</fullName>
            </value>
            <value>
                <fullName>BASE OILS - 10156 - Base Oils</fullName>
            </value>
            <value>
                <fullName>Bus, Fin &amp; Admin - 10120 - General business</fullName>
            </value>
            <value>
                <fullName>Bus, Fin &amp; Admin - 10121 - Finance and admin</fullName>
            </value>
            <value>
                <fullName>Bus, Fin &amp; Admin - 10122 - Government orgs</fullName>
            </value>
            <value>
                <fullName>Concrete Manuf - 10204 - Recycler/Tech Soln</fullName>
            </value>
            <value>
                <fullName>Concrete Manuf - 10205 - Regular Precast</fullName>
            </value>
            <value>
                <fullName>CRT HAULIERS - 10094 - CRT Long Haul Fleets</fullName>
            </value>
            <value>
                <fullName>CRT HAULIERS - 10095 - CRT Short Haul Fleet</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>