force-app/main/default/objects/BET_BDD_Form__c/fields/GSAP_Delivery_Pri__c.field-meta.xml
<CustomField>
    <fullName>GSAP_Delivery_Pri__c</fullName>
    <label>* Delivery Priority</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>01 - Time at Order</fullName>
            </value>
            <value>
                <fullName>02 - Pre-agreed Time</fullName>
            </value>
            <value>
                <fullName>03 - Pre-agreed Day/Time</fullName>
            </value>
            <value>
                <fullName>04 - Time at Scheduling</fullName>
            </value>
            <value>
                <fullName>05 - Day &amp; Time at Order</fullName>
            </value>
            <value>
                <fullName>09 - Deliver by Day</fullName>
            </value>
            <value>
                <fullName>10 - Premium Hypermarket</fullName>
            </value>
            <value>
                <fullName>11 - Promo Ord (Hypermkt)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>