force-app/main/default/objects/BET_BDD_Form__c/fields/GSAP_Desired_CredLimit__c.field-meta.xml
<CustomField>
    <fullName>GSAP_Desired_CredLimit__c</fullName>
    <label>* Desired Credit Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>