force-app/main/default/objects/BET_BDD_Form__c/fields/GSAP_Export_Allowed__c.field-meta.xml
<CustomField>
    <fullName>GSAP_Export_Allowed__c</fullName>
    <label>* Export Allowed?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>