force-app/main/default/objects/BET_BDD_Form__c/fields/GSAP_Incoterm__c.field-meta.xml
<CustomField>
    <fullName>GSAP_Incoterm__c</fullName>
    <label>Incoterm</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CFR - Costs and freight</fullName>
            </value>
            <value>
                <fullName>CIF - Costs, insurance &amp; freight</fullName>
            </value>
            <value>
                <fullName>CIP - Carriage and insurance paid to</fullName>
            </value>
            <value>
                <fullName>CPT - Carriage paid to</fullName>
            </value>
            <value>
                <fullName>DAP - Delivered at place.</fullName>
            </value>
            <value>
                <fullName>DAT - Delivered at terminal</fullName>
            </value>
            <value>
                <fullName>DDP - Delivered Duty Paid</fullName>
            </value>
            <value>
                <fullName>EXW - Ex Works</fullName>
            </value>
            <value>
                <fullName>FAS - Free Alongside Ship</fullName>
            </value>
            <value>
                <fullName>FCA - Free Carrier</fullName>
            </value>
            <value>
                <fullName>FOB - Free on board</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>