force-app/main/default/objects/BET_BDD_Form__c/fields/GSAP_Incoterm_Desc__c.field-meta.xml
<CustomField>
    <fullName>GSAP_Incoterm_Desc__c</fullName>
    <label>Incoterm Description</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>