force-app/main/default/objects/BET_BDD_Form__c/fields/GSAP_Legal_Status__c.field-meta.xml
<CustomField>
    <fullName>GSAP_Legal_Status__c</fullName>
    <label>* Legal Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>GV - Government</fullName>
            </value>
            <value>
                <fullName>LC - Limited Company</fullName>
            </value>
            <value>
                <fullName>PV - Private Customer</fullName>
            </value>
            <value>
                <fullName>UC - Unlimited Company</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>