force-app/main/default/objects/BET_BDD_Form__c/fields/GSAP_NAICS_Code__c.field-meta.xml
<CustomField>
    <fullName>GSAP_NAICS_Code__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>* NAICS Code</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>BET_Custom_Picklist__c.BET_NAICS_Code__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>BET_Custom_Picklist__c</referenceTo>
    <relationshipLabel>BDD Forms (NAICS Code)</relationshipLabel>
    <relationshipName>BDD_Forms</relationshipName>
    <type>Lookup</type>
</CustomField>