force-app/main/default/objects/BET_BDD_Form__c/fields/GSAP_Purchase_PaymentTerm__c.field-meta.xml
<CustomField>
    <fullName>GSAP_Purchase_PaymentTerm__c</fullName>
    <inlineHelpText>Not required if Business Line is Terminalling</inlineHelpText>
    <label>* Purchase Payment Term</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>H007 - 10th of Next Month</fullName>
            </value>
            <value>
                <fullName>HB00 - Immediate Payment from Date on Invoice</fullName>
            </value>
            <value>
                <fullName>HB03 - Due 3 days from Invoice Date</fullName>
            </value>
            <value>
                <fullName>HB07 - Due 7 days from Invoice Date</fullName>
            </value>
            <value>
                <fullName>HB10 - Due 10 days from Invoice Date</fullName>
            </value>
            <value>
                <fullName>HB14 - Due 14 days from Invoice Date</fullName>
            </value>
            <value>
                <fullName>HB21 - Due 21 days from Invoice Date</fullName>
            </value>
            <value>
                <fullName>HB25 - Due 25 days from Invoice Date</fullName>
            </value>
            <value>
                <fullName>HB30 - Due 30 days from Invoice Date</fullName>
            </value>
            <value>
                <fullName>HC02 - 2 Working days from receipt of invoice</fullName>
            </value>
            <value>
                <fullName>HG05 - 5 Calendar Days After Bill of Lading</fullName>
            </value>
            <value>
                <fullName>HG10 - 10 Calendar Days After Bill of Lading</fullName>
            </value>
            <value>
                <fullName>HG20 - 20 Calendar Days After Bill of Lading</fullName>
            </value>
            <value>
                <fullName>HG30 - 30 Calendar Days After Bill of Lading</fullName>
            </value>
            <value>
                <fullName>HH07 - Net 7 days from end of month</fullName>
            </value>
            <value>
                <fullName>HH10 - Net 10 days from end of month</fullName>
            </value>
            <value>
                <fullName>HH15 - Net 15 days from end of month</fullName>
            </value>
            <value>
                <fullName>HH20 - Net 20 days from end of month</fullName>
            </value>
            <value>
                <fullName>HH21 - Net 21 days from end of month</fullName>
            </value>
            <value>
                <fullName>HH30 - Net 30 days from end of month</fullName>
            </value>
            <value>
                <fullName>HI06 - 6th of 2nd Following Month</fullName>
            </value>
            <value>
                <fullName>HI15 - 15th of 2nd Following Month</fullName>
            </value>
            <value>
                <fullName>HJ05 - 5 Working Days After Bill of Lading</fullName>
            </value>
            <value>
                <fullName>HJ10 - 10 Working Days After Bill of Lading</fullName>
            </value>
            <value>
                <fullName>HJ15 - 15 Working Days After Bill of Lading</fullName>
            </value>
            <value>
                <fullName>HJ20 - 20 Working Days After Bill of Lading</fullName>
            </value>
            <value>
                <fullName>HJ30 - 30 Working Days After Bill of Lading</fullName>
            </value>
            <value>
                <fullName>HK15 - 15th of 3rd Following Month</fullName>
            </value>
            <value>
                <fullName>HL07 - 7 Working days from end of month</fullName>
            </value>
            <value>
                <fullName>HM14 - Friday plus 14 days</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>