force-app/main/default/objects/BET_BDD_Form__c/fields/GSAP_Sales_Group__c.field-meta.xml
<CustomField>
    <fullName>GSAP_Sales_Group__c</fullName>
    <label>* Sales Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A28 - ZZ Supply</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>