force-app/main/default/objects/BET_BDD_Form__c/fields/GSAP_SalesPayment_Term__c.field-meta.xml
<CustomField>
    <fullName>GSAP_SalesPayment_Term__c</fullName>
    <label>* Sales Payment Term</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>H001 - 5 Working Days After Bill Of Lading</fullName>
            </value>
            <value>
                <fullName>H002 - 10 Working Days After Bill Of Lading</fullName>
            </value>
            <value>
                <fullName>H003 - 15 Working Days After Bill Of Lading</fullName>
            </value>
            <value>
                <fullName>H004 - 20 Working Days After Bill Of Lading</fullName>
            </value>
            <value>
                <fullName>H005 - 30 Working Days After Bill Of Lading</fullName>
            </value>
            <value>
                <fullName>H006 - Twice Monthly Fixed Day 15th</fullName>
            </value>
            <value>
                <fullName>H006 - Twice Monthly Fixed Day 31st</fullName>
            </value>
            <value>
                <fullName>H007 - 10th of Next Month</fullName>
            </value>
            <value>
                <fullName>H008 - 6th of 2nd Following Month</fullName>
            </value>
            <value>
                <fullName>H009 - 15th of 3rd Following Month</fullName>
            </value>
            <value>
                <fullName>H010 - 3 Monthly Fixed Date 10th Day</fullName>
            </value>
            <value>
                <fullName>H010 - 3 Monthly Fixed Date 20th Day</fullName>
            </value>
            <value>
                <fullName>H010 - 3 Monthly Fixed Date 31st Day</fullName>
            </value>
            <value>
                <fullName>H011 - 5 Calendar Days After Bill Of Lading</fullName>
            </value>
            <value>
                <fullName>H012 - 10 Calendar Days After Bill Of Lading</fullName>
            </value>
            <value>
                <fullName>H013 - 20 Calendar Days After Bill Of Lading</fullName>
            </value>
            <value>
                <fullName>H014 - 30 Calendar Days After Bill Of Lading</fullName>
            </value>
            <value>
                <fullName>H015 - Twice Monthly Fixed Day 20th of Month</fullName>
            </value>
            <value>
                <fullName>H015 - Twice Monthly Fixed Day 5th Next Month</fullName>
            </value>
            <value>
                <fullName>H016 - 2 Working Days After Invoice</fullName>
            </value>
            <value>
                <fullName>H017 - 29 Working Days After Bill Of Lading</fullName>
            </value>
            <value>
                <fullName>H112 - 112  days from invoice date</fullName>
            </value>
            <value>
                <fullName>HB00 - Immediate Payment at Date on Invoice</fullName>
            </value>
            <value>
                <fullName>HB03 - 3 Calendar days after Delivery Date</fullName>
            </value>
            <value>
                <fullName>HB05 - 5 Calendar days after Delivery Date</fullName>
            </value>
            <value>
                <fullName>HB06 - 6 Calendar days after Delivery Date</fullName>
            </value>
            <value>
                <fullName>HB07 - 7 Calendar days after Delivery Date</fullName>
            </value>
            <value>
                <fullName>HB08 - 8 Calendar days after Delivery Date</fullName>
            </value>
            <value>
                <fullName>HB09 - 9 Calendar days after Delivery Date</fullName>
            </value>
            <value>
                <fullName>HB10 - 10 Calendar days after Delivery Date</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>