force-app/main/default/objects/BET_BDD_Form__c/fields/GSAP_Ship_Cond__c.field-meta.xml
<CustomField>
    <fullName>GSAP_Ship_Cond__c</fullName>
    <label>* Shipping Conditions</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>10 Road Pickup</fullName>
            </value>
            <value>
                <fullName>11 Road Delivery</fullName>
            </value>
            <value>
                <fullName>20 Rail Pickup</fullName>
            </value>
            <value>
                <fullName>21 Rail Delivery</fullName>
            </value>
            <value>
                <fullName>30 Vessel Pickup</fullName>
            </value>
            <value>
                <fullName>40 Barge Pickup</fullName>
            </value>
            <value>
                <fullName>41 Barge Delivery</fullName>
            </value>
            <value>
                <fullName>51 Aviation Delivery</fullName>
            </value>
            <value>
                <fullName>52 Into Plane Delivery</fullName>
            </value>
            <value>
                <fullName>70 Pipeline Pickup</fullName>
            </value>
            <value>
                <fullName>71 Pipeline Delivery</fullName>
            </value>
            <value>
                <fullName>80 In-Tank</fullName>
            </value>
            <value>
                <fullName>91 APO/STO Multi Mode</fullName>
            </value>
            <value>
                <fullName>31 Vessel Delivery</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>