force-app/main/default/objects/BET_BDD_Form__c/fields/GT_BDD_Business_Division__c.field-meta.xml
<CustomField>
    <fullName>GT_BDD_Business_Division__c</fullName>
    <label>* BDD Business Division</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Crude Global</fullName>
            </value>
            <value>
                <fullName>Global Finance</fullName>
            </value>
            <value>
                <fullName>Global Operations</fullName>
            </value>
            <value>
                <fullName>JV Majority Shell-owned</fullName>
            </value>
            <value>
                <fullName>Legal Counsel</fullName>
            </value>
            <value>
                <fullName>Products Global</fullName>
            </value>
            <value>
                <fullName>Shell Energy Americas</fullName>
            </value>
            <value>
                <fullName>Shell Energy Asia</fullName>
            </value>
            <value>
                <fullName>Shell Energy Australia</fullName>
            </value>
            <value>
                <fullName>Shell Energy Europe</fullName>
            </value>
            <value>
                <fullName>Shell Energy LNG</fullName>
            </value>
            <value>
                <fullName>Shipping</fullName>
            </value>
            <value>
                <fullName>Shell Energy MEA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>